@startuml
title Diagrama ER Físico — MentorEdu v2.0\npor Bounded Context

left to right direction
hide circle
skinparam linetype ortho
skinparam shadowing false
skinparam packageStyle rectangle
skinparam defaultFontName Arial

' =========================
' AUTH
' =========================
package "auth" {
  entity "roles" as roles {
    *id : UUID <<PK>>
    --
    *name : VARCHAR(30) <<UQ>>
    description : VARCHAR(120)
  }

  entity "users" as users {
    *id : UUID <<PK>>
    --
    *first_name : VARCHAR(80)
    *last_name : VARCHAR(80)
    *email : VARCHAR(120) <<UQ>>
    *password_hash : VARCHAR(255)
    *provider : VARCHAR(20)
    *status : VARCHAR(20)
    *role_id : UUID <<FK>>
    created_at : TIMESTAMP
    updated_at : TIMESTAMP
  }

  entity "password_reset_tokens" as password_reset_tokens {
    *id : UUID <<PK>>
    --
    *user_id : UUID <<FK>>
    *token : VARCHAR(255) <<UQ>>
    *expires_at : TIMESTAMP
    *used : BOOLEAN
    created_at : TIMESTAMP
  }

  entity "sessions" as sessions {
    *id : UUID <<PK>>
    --
    *user_id : UUID <<FK>>
    *refresh_token : VARCHAR(255) <<UQ>>
    *expires_at : TIMESTAMP
    revoked_at : TIMESTAMP
    created_at : TIMESTAMP
  }
}

' =========================
' CATALOG
' =========================
package "catalog" {
  entity "universities" as universities {
    *id : UUID <<PK>>
    --
    *name : VARCHAR(120) <<UQ>>
    city : VARCHAR(80)
  }

  entity "areas" as areas {
    *id : UUID <<PK>>
    --
    *university_id : UUID <<FK>>
    *name : VARCHAR(120)
    description : TEXT
    <<UNIQUE (university_id, name)>>
  }

  entity "courses" as courses {
    *id : UUID <<PK>>
    --
    *name : VARCHAR(120) <<UQ>>
    description : TEXT
  }

  entity "area_courses" as area_courses {
    *area_id : UUID <<PK, FK>>
    *course_id : UUID <<PK, FK>>
  }

  entity "careers" as careers {
    *id : UUID <<PK>>
    --
    *university_id : UUID <<FK>>
    *area_id : UUID <<FK>>
    *name : VARCHAR(120)
    description : TEXT
  }

  entity "career_courses" as career_courses {
    *career_id : UUID <<PK, FK>>
    *course_id : UUID <<PK, FK>>
  }
}

' =========================
' PROFILE
' =========================
package "profile" {
  entity "profiles" as profiles {
    *id : UUID <<PK>>
    --
    *user_id : UUID <<FK, UQ>>
    *display_name : VARCHAR(120)
    avatar_url : TEXT
    city : VARCHAR(80)
    bio : TEXT
    *profile_type : VARCHAR(20)
    created_at : TIMESTAMP
    updated_at : TIMESTAMP
  }

  entity "student_profiles" as student_profiles {
    *profile_id : UUID <<PK, FK>>
    --
    school_name : VARCHAR(120)
    grade_level : VARCHAR(20)
    study_shift : VARCHAR(30)
    target_university_id : UUID <<FK>>
    target_area_id : UUID <<FK>>
    target_career_id : UUID <<FK>>
  }

  entity "teacher_profiles" as teacher_profiles {
    *profile_id : UUID <<PK, FK>>
    --
    bio_professional : TEXT
  }

  entity "academy_profiles" as academy_profiles {
    *profile_id : UUID <<PK, FK>>
    --
    *academy_name : VARCHAR(120) <<UQ>>
    ruc : VARCHAR(20) <<UQ>>
    website : VARCHAR(255)
    contact_email : VARCHAR(120)
  }
}

' =========================
' LIBRARY
' =========================
package "library" {
  entity "resources" as resources {
    *id : UUID <<PK>>
    --
    *author_user_id : UUID <<FK>>
    *university_id : UUID <<FK>>
    *area_id : UUID <<FK>>
    career_id : UUID <<FK>>
    course_id : UUID <<FK>>
    file_url : TEXT
    file_name : VARCHAR(255)
    mime_type : VARCHAR(80)
    size_bytes : BIGINT
    *title : VARCHAR(160)
    description : TEXT
    *resource_type : VARCHAR(30)
    *visibility : VARCHAR(20)
    *acepta_resoluciones : BOOLEAN
    created_at : TIMESTAMP
    updated_at : TIMESTAMP
    <<CHECK course_id IS NOT NULL OR resource_type IN ('EXAMEN_COMPLETO','GUIA','APUNTES')>>
    <<CHECK acepta_resoluciones = false OR resource_type = 'PRACTICA'>>
    <<INDEX idx_resources_student_feed (university_id, area_id, career_id, resource_type)>>
    <<INDEX idx_resources_title_trgm GIN (title) pg_trgm>>
    <<INDEX idx_resources_description_trgm GIN (description) pg_trgm>>
  }

  entity "download_logs" as download_logs {
    *id : UUID <<PK>>
    --
    *user_id : UUID <<FK>>
    *resource_id : UUID <<FK>>
    *downloaded_at : TIMESTAMP
  }
}

' =========================
' FORUM
' =========================
package "forum" {
  entity "threads" as threads {
    *id : UUID <<PK>>
    --
    *author_user_id : UUID <<FK>>
    *title : VARCHAR(160)
    *body : TEXT
    *is_anonymous : BOOLEAN
    *status : VARCHAR(20)
    university_id : UUID <<FK>>
    area_id : UUID <<FK>>
    course_id : UUID <<FK>>
    career_id : UUID <<FK>>
    created_at : TIMESTAMP
    updated_at : TIMESTAMP
    <<CHECK area_id IS NULL OR university_id IS NOT NULL>>
    <<CHECK career_id IS NULL OR course_id IS NULL>>
    <<CHECK university_id IS NOT NULL OR course_id IS NOT NULL OR career_id IS NOT NULL>>
    <<INDEX idx_threads_feed (university_id, area_id, course_id, career_id, status)>>
  }

  entity "answers" as answers {
    *id : UUID <<PK>>
    --
    *thread_id : UUID <<FK>>
    *author_user_id : UUID <<FK>>
    *body : TEXT
    *is_accepted : BOOLEAN
    created_at : TIMESTAMP
    updated_at : TIMESTAMP
  }

  entity "comments" as comments {
    *id : UUID <<PK>>
    --
    *thread_id : UUID <<FK>>
    answer_id : UUID <<FK>>
    *author_user_id : UUID <<FK>>
    *body : TEXT
    created_at : TIMESTAMP
    updated_at : TIMESTAMP
  }

  entity "reactions" as reactions {
    *id : UUID <<PK>>
    --
    *user_id : UUID <<FK>>
    *target_type : VARCHAR(20)
    *target_id : UUID
    *reaction_type : VARCHAR(20)
    created_at : TIMESTAMP
    <<UNIQUE (user_id, target_type, target_id)>>
  }
}

' =========================
' PEDAGOGY
' =========================
package "pedagogy" {
  entity "solutions" as solutions {
    *id : UUID <<PK>>
    --
    *resource_id : UUID <<FK>>
    *student_id : UUID <<FK>>
    file_url : TEXT
    content : TEXT
    *status : VARCHAR(20)
    submitted_at : TIMESTAMP
    <<UNIQUE (resource_id, student_id)>>
  }

  entity "feedback_entries" as feedback_entries {
    *id : UUID <<PK>>
    --
    *solution_id : UUID <<FK, UQ>>
    *author_user_id : UUID <<FK>>
    score : DECIMAL(4,2)
    *body : TEXT
    created_at : TIMESTAMP
    <<CHECK score BETWEEN 0.0 AND 10.0>>
  }
}

' =========================
' COMMUNITY
' =========================
package "community" {
  entity "follows" as follows {
    *id : UUID <<PK>>
    --
    *follower_id : UUID <<FK>>
    *followed_id : UUID <<FK>>
    created_at : TIMESTAMP
    <<UNIQUE (follower_id, followed_id)>>
    <<CHECK follower_id != followed_id>>
  }

  entity "verification_requests" as verification_requests {
    *id : UUID <<PK>>
    --
    *user_id : UUID <<FK>>
    *entity_type : VARCHAR(20)
    *status : VARCHAR(20)
    notes : TEXT
    submitted_at : TIMESTAMP
    reviewed_by : UUID <<FK>>
    reviewed_at : TIMESTAMP
  }

  entity "verification_docs" as verification_docs {
    *id : UUID <<PK>>
    --
    *request_id : UUID <<FK>>
    *document_type : VARCHAR(50)
    *file_url : TEXT
    uploaded_at : TIMESTAMP
  }

  entity "teacher_academy_links" as teacher_academy_links {
    *id : UUID <<PK>>
    --
    *teacher_profile_id : UUID <<FK>>
    *academy_profile_id : UUID <<FK>>
    *status : VARCHAR(20)
    requested_at : TIMESTAMP
    resolved_at : TIMESTAMP
    <<UNIQUE (teacher_profile_id, academy_profile_id)>>
  }

  entity "reports" as reports {
    *id : UUID <<PK>>
    --
    *reporter_user_id : UUID <<FK>>
    *target_type : VARCHAR(30)
    *target_id : UUID
    *reason : VARCHAR(200)
    *status : VARCHAR(20)
    resolution_note : TEXT
    resolved_by : UUID <<FK>>
    created_at : TIMESTAMP
    resolved_at : TIMESTAMP
  }

  entity "moderation_audit_log" as moderation_audit_log {
    *id : UUID <<PK>>
    --
    *report_id : UUID <<FK>>
    *actor_id : UUID <<FK>>
    *action : VARCHAR(30)
    note : TEXT
    *created_at : TIMESTAMP
    <<INDEX idx_audit_report_id (report_id)>>
    <<INDEX idx_audit_actor_id (actor_id)>>
  }

  entity "notifications" as notifications {
    *id : UUID <<PK>>
    --
    *user_id : UUID <<FK>>
    *type : VARCHAR(30)
    payload : JSONB
    read_at : TIMESTAMP
    created_at : TIMESTAMP
  }
}

' =========================
' RELATIONSHIPS
' =========================

' AUTH
roles ||--o{ users : role_id
users ||--o{ password_reset_tokens : user_id
users ||--o{ sessions : user_id

' CATALOG
universities ||--o{ areas : university_id
universities ||--o{ careers : university_id
areas ||--o{ careers : area_id
areas ||--o{ area_courses : area_id
courses ||--o{ area_courses : course_id
careers ||--o{ career_courses : career_id
courses ||--o{ career_courses : course_id

' PROFILE
users ||--o| profiles : user_id
profiles ||--o| student_profiles : profile_id
profiles ||--o| teacher_profiles : profile_id
profiles ||--o| academy_profiles : profile_id
universities ||--o{ student_profiles : target_university_id
areas ||--o{ student_profiles : target_area_id
careers ||--o{ student_profiles : target_career_id
' LIBRARY
users ||--o{ resources : author_user_id
universities ||--o{ resources : university_id
areas ||--o{ resources : area_id
careers |o--o{ resources : career_id
courses |o--o{ resources : course_id
users ||--o{ download_logs : user_id
resources ||--o{ download_logs : resource_id

' FORUM
users ||--o{ threads : author_user_id
universities |o--o{ threads : university_id
areas |o--o{ threads : area_id
courses |o--o{ threads : course_id
careers |o--o{ threads : career_id
threads ||--o{ answers : thread_id
users ||--o{ answers : author_user_id
threads ||--o{ comments : thread_id
answers ||--o{ comments : answer_id
users ||--o{ comments : author_user_id
users ||--o{ reactions : user_id

' PEDAGOGY
resources ||--o{ solutions : resource_id
users ||--o{ solutions : student_id
solutions ||--|| feedback_entries : solution_id
users ||--o{ feedback_entries : author_user_id

' COMMUNITY
users ||--o{ follows : follower_id
users ||--o{ follows : followed_id
users ||--o{ verification_requests : user_id
users ||--o{ verification_requests : reviewed_by
verification_requests ||--o{ verification_docs : request_id
teacher_profiles ||--o{ teacher_academy_links : teacher_profile_id
academy_profiles ||--o{ teacher_academy_links : academy_profile_id
users ||--o{ reports : reporter_user_id
users ||--o{ reports : resolved_by
reports ||--o{ moderation_audit_log : report_id
users ||--o{ moderation_audit_log : actor_id
users ||--o{ notifications : user_id

@enduml
